CMAKE_MINIMUM_REQUIRED (VERSION 3.0)
PROJECT (qpdf)

SET (CMAKE_CXX_STANDARD 11)

ADD_SUBDIRECTORY (thirdparty/googletest)
ADD_SUBDIRECTORY (tests)

SET (SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)
SET (INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include)
SET (SOURCES
        ${SRC_DIR}/example.cpp)

ADD_EXECUTABLE (qpdf_example ${SOURCES})
