CMAKE_MINIMUM_REQUIRED (VERSION 3.0)
PROJECT (tests)

SET (SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR})
SET (MAIN_SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../src)
SET (SOURCES
        ${SRC_DIR}/main.cpp
        ${SRC_DIR}/StringTest.cpp
        # main sources
        ${MAIN_SRC_DIR}/string.cpp
    )

ADD_EXECUTABLE (tests ${SOURCES})
TARGET_INCLUDE_DIRECTORIES (tests PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../include)
TARGET_LINK_LIBRARIES (tests gtest)
